--- a/src/qos_client/Cargo.toml
+++ b/src/qos_client/Cargo.toml
@@ -13,8 +13,11 @@ qos_p256 = { path = "../qos_p256" }
 # Third party
 ureq = { version = "2.4", default-features = false }
 aws-nitro-enclaves-nsm-api = { version = "0.2.1", default-features = false }
-
 borsh = { version = "0.9" }
+x509 = "*"
+yubikey = { version = "*" }
+p256 = "*"
+rand_core = "*"
 
 [dev-dependencies]
 # We need mock enabled to grab things related to the mock NSM.
