--- a/src/qos_client/Cargo.toml
+++ b/src/qos_client/Cargo.toml
@@ -14,10 +14,10 @@ qos_p256 = { path = "../qos_p256" }
 ureq = { version = "2.4", default-features = false }
 aws-nitro-enclaves-nsm-api = { version = "0.2.1", default-features = false }
 borsh = { version = "0.9" }
-x509 = "*"
-yubikey = { version = "*", features = ["untested"] }
-p256 = "*"
-rand_core = "*"
+x509 = { version = "0.2", default-features = false }
+yubikey = { version = "*", features = ["untested"], default-features = false }
+p256 = { version = "0.11", default-features = false }
+rand_core = { version = "0.6", default-features = false }
 zeroize = { version = "1.5", default-features = false }
 
 [dev-dependencies]
