cleanup and fix broken vars that prevented static builds.

--- a/config/global.env
+++ b/config/global.env
@@ -1,10 +1,11 @@
-export NAME = appliance-linux
+export NAME = qos
 
 export BUSYBOX_VERSION = 1.33.2
 export LINUX_VERSION = 5.19.6
 
 export SOURCE_DATE_EPOCH = 0
-export FAKETIME = "1970-01-01 00:00:00 UTC"
+export FAKETIME_FMT = "%s"
+export FAKETIME = "0"
 export KBUILD_BUILD_TIMESTAMP = "1970-01-01 00:00:00 UTC"
 export KCONFIG_NOTIMESTAMP = 1
 export KBUILD_BUILD_USER = root
