--- a/src/qos_client/Cargo.toml
+++ b/src/qos_client/Cargo.toml
@@ -19,6 +19,7 @@ yubikey = { version = "*", features = ["untested"], default-features = false }
 p256 = { version = "0.11", default-features = false }
 rand_core = { version = "0.6", default-features = false }
 zeroize = { version = "1.5", default-features = false }
+rpassword = { version = "7.1", default-features = false }
 
 [dev-dependencies]
 # We need mock enabled to grab things related to the mock NSM.
