--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 release/aws/nitro.eif filter=lfs diff=lfs merge=lfs -text
+release/qos_client filter=lfs diff=lfs merge=lfs -text
+release/qos_host filter=lfs diff=lfs merge=lfs -text
