--- a/src/qos_client/Cargo.toml
+++ b/src/qos_client/Cargo.toml
@@ -14,11 +14,12 @@ qos_p256 = { path = "../qos_p256" }
 ureq = { version = "2.4", default-features = false }
 aws-nitro-enclaves-nsm-api = { version = "0.2.1", default-features = false }
 borsh = { version = "0.9", default-features = false }
-x509 = { version = "0.2", default-features = false }
-yubikey = { version = "*", features = ["untested"], default-features = false }
 p256 = { version = "0.11", default-features = false }
 rand_core = { version = "0.6", default-features = false }
 zeroize = { version = "1.5", default-features = false }
+
+x509 = { version = "0.2", default-features = false, optional = true }
+yubikey = { version = "*", features = ["untested"], default-features = false, optional = true }
 
 [dev-dependencies]
 # We need mock enabled to grab things related to the mock NSM.
@@ -27,5 +28,6 @@ lazy_static = "1.4"
 qos_test_primitives = { path = "../qos_test_primitives" }
 
 [features]
-default = []
+default = ["smartcard"]
+smartcard = ["x509", "yubikey"]
 
