--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
 release/aws/nitro.eif filter=lfs diff=lfs merge=lfs -text
 release/qos_client filter=lfs diff=lfs merge=lfs -text
 release/qos_host filter=lfs diff=lfs merge=lfs -text
+releases/0.1rc1/aws-nitro.eif filter=lfs diff=lfs merge=lfs -text
+releases/0.1rc1/qos_client filter=lfs diff=lfs merge=lfs -text
+releases/0.1rc1/qos_host filter=lfs diff=lfs merge=lfs -text
