boot key forward & request key services
Create qos_nsm crate

Get qos_nsm to compile in workspace

WIP

Refactor verify_attestation_doc_against_user_input to return errors

Refactor cross check manifest

WIP

Factor out key forwarding to its own file

Setup some mock test inputs

WIP tests

Fix broken tests

Clean up linting

--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -9,6 +9,7 @@ members = [
   "qos_hex",
   "qos_test_primitives",
   "qos_p256",
+  "qos_nsm",
 ]
 exclude = ["init", "qos_aws", "qos_system", "toolchain"]
 # We need this to avoid issues with the mock feature uinintentionally being
