--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Install stable toolchain
         id: toolchain
-        uses: actions-rs/toolchain@568dc894a7f9e32ffd9bb7d7a6cebb784cdaa2b0 # v1.0.7
+        uses: actions-rs/toolchain@568dc894a7f9e32ffd9bb7d7a6cebb784cdaa2b0 # renovate: tag=v1.0.7
         with:
           profile: minimal
           toolchain: 1.61
@@ -37,7 +37,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install nightly toolchain
-        uses: actions-rs/toolchain@568dc894a7f9e32ffd9bb7d7a6cebb784cdaa2b0 # v1.0.7
+        uses: actions-rs/toolchain@568dc894a7f9e32ffd9bb7d7a6cebb784cdaa2b0 # renovate: tag=v1.0.7
         with:
           profile: minimal
           toolchain: nightly
@@ -59,7 +59,7 @@ jobs:
 
       - name: Install stable toolchain
         id: toolchain
-        uses: actions-rs/toolchain@568dc894a7f9e32ffd9bb7d7a6cebb784cdaa2b0 # v1.0.7
+        uses: actions-rs/toolchain@568dc894a7f9e32ffd9bb7d7a6cebb784cdaa2b0 # renovate: tag=v1.0.7
         with:
           profile: minimal
           toolchain: 1.61
