--- a/src/qos_aws/Cargo.toml
+++ b/src/qos_aws/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 
 [dependencies]
 libc = "0.2.134"
-nsm_lib = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", branch = "main", package="nsm-lib", optional = false }
-nsm_api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", branch = "main", package="aws-nitro-enclaves-nsm-api", optional = false }
+nsm_lib = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", package="nsm-lib", rev = "cfcf7a29587f5bc9338a2535221af84492f949c5" }
+nsm_api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", package="aws-nitro-enclaves-nsm-api", rev = "cfcf7a29587f5bc9338a2535221af84492f949c5" }
 qos_system = { path = "../qos_system"}
