qos_nsm: add mock-realtime feature

--- a/src/qos_nsm/Cargo.toml
+++ b/src/qos_nsm/Cargo.toml
@@ -22,3 +22,4 @@ qos_core = { path = "../qos_core", features = ["mock"] }
 [features]
 # Never use in production - support for mock NSM
 mock = []
+mock_realtime = []
