--- a/src/integration/Cargo.toml
+++ b/src/integration/Cargo.toml
@@ -16,6 +16,7 @@ qos_test_primitives = { path = "../qos_test_primitives" }
 
 tokio = { version = "1.24", features = ["macros", "rt-multi-thread"], default-features = false }
 borsh = { version = "0.10" }
+nix = { version = "0.24.2", features = ["socket"], default-features = false }
 
 [dev-dependencies]
 qos_core = { path = "../qos_core", features = ["mock"], default-features = false }
