--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 dist/*.eif filter=lfs diff=lfs merge=lfs -text
+dist/*.tar filter=lfs diff=lfs merge=lfs -text
 dist/*.x86_64 filter=lfs diff=lfs merge=lfs -text
