--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -78,7 +78,7 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@v3
 
-      - name: Install packages for pcsc depqos_core/src/protocol/error.rs:25:8
+      - name: Install packages for pcsc dep
         run: sudo apt-get install -y libpcsclite-dev gengetopt
 
       - name: Install stable toolchain
