--- a/config/global.env
+++ b/config/global.env
@@ -13,3 +13,5 @@ RUST_REPO=https://github.com/rust-lang/rust
 RUST_REF=4b91a6ea7258a947e59c6522cd5898e7c0a6a88f
 LIBUSB_REPO=https://github.com/libusb/libusb
 LIBUSB_REF=4239bc3a50014b8e6a5a2a59df1fff3b7469543b
+OPENSSL_REPO=https://github.com/openssl/openssl
+OPENSSL_REF=a92271e03a8d0dee507b6f1e7f49512568b2c7ad
