--- a/src/qos_nsm/Cargo.toml
+++ b/src/qos_nsm/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 qos_hex = { path = "../qos_hex" }
 borsh = { version = "0.10" }
-aws-nitro-enclaves-nsm-api = { version = "0.2.1", default-features = false }
+aws-nitro-enclaves-nsm-api = { version = "0.3", features = ["nix"], default-features = false }
 aws-nitro-enclaves-cose = { version = "0.5", default-features = false }
 sha2 = { version = "0.10", default-features = false }
 webpki = { version =  "0.22.0", default-features = false }
