makefile cleanup and renames

--- a/src/images/enclave/Dockerfile
+++ b/src/images/enclave/Dockerfile
@@ -1,6 +1,8 @@
 FROM scratch
-ARG BIN
-ARG EIF
-COPY ${BIN} /
-COPY ${EIF} /
-CMD ${BIN}
+LABEL org.opencontainers.image.source=https://github.com/tkhq/qos
+COPY ${BIN} /qos_enclave
+COPY ${EIF} /nitro.eif
+ENTRYPOINT ["/qos_enclave"]
+ENV EIF_PATH=/nitro.eif
+ENV ENCLAVE_NAME=qos
+EXPOSE 8080
