--- a/config/global.env
+++ b/config/global.env
@@ -17,7 +17,6 @@ OPENSSL_REF=a92271e03a8d0dee507b6f1e7f49512568b2c7ad
 CARGO_FLAGS=--locked --no-default-features --release --target x86_64-unknown-linux-musl
 CARGO_HOME=${CACHE_DIR}/cargo
 PKG_CONFIG_ALLOW_CROSS=1
-OPENSSL_STATIC=true
 X86_64_UNKNOWN_LINUX_MUSL_OPENSSL_DIR=/home/build/${CACHE_DIR}/lib64
 X86_64_UNKNOWN_LINUX_MUSL_OPENSSL_LIB_DIR=/home/build/${CACHE_DIR}/lib64
 X86_64_UNKNOWN_LINUX_MUSL_OPENSSL_INCLUDE_DIR=/home/build/${CACHE_DIR}/include
@@ -26,4 +25,4 @@ PCSC_LIB_NAME=static=pcsclite
 CC=musl-gcc
 CXX=musl-g++
 CFLAGS=-static
-{CXXFLAGS=-static
+CXXFLAGS=-static
