--- a/src/images/client/Dockerfile
+++ b/src/images/client/Dockerfile
@@ -1,4 +1,5 @@
 FROM scratch
+LABEL org.opencontainers.image.source=https://github.com/tkhq/qos
 ARG BIN
-COPY ${BIN} /
-CMD ${BIN}
+COPY ${BIN} /qos_client
+ENTRYPOINT ["/qos_client"]
