--- a/src/images/host/Dockerfile
+++ b/src/images/host/Dockerfile
@@ -1,4 +1,5 @@
 FROM scratch
+LABEL org.opencontainers.image.source=https://github.com/tkhq/qos
 ARG BIN
-COPY ${BIN} /
-CMD ${BIN}
+COPY ${BIN} /qos_host
+ENTRYPOINT ["/qos_host"]
