--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 dist/*.eif filter=lfs diff=lfs merge=lfs -text
 dist/*.tar filter=lfs diff=lfs merge=lfs -text
 dist/*.linux-x86_64 filter=lfs diff=lfs merge=lfs -text
+fetch/apt/*.deb filter=lfs diff=lfs merge=lfs -text
