--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
 dist/*.eif filter=lfs diff=lfs merge=lfs -text
 dist/*.tar filter=lfs diff=lfs merge=lfs -text
 dist/*.linux-x86_64 filter=lfs diff=lfs merge=lfs -text
+fetch/apt/*.deb
+fetch/apt/Packages.bz2
+fetch/*.tar
