Convert to kustomize component, add startup probe

--- a/src/qos_host/kustomize/base/deployment.yaml
+++ b/src/qos_host/kustomize/base/deployment.yaml
@@ -1,13 +1,13 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: qos-host
+  name: example
 spec:
   template:
     spec:
       containers:
-        - name: qos/host
-          image:
+        - name: qos-host
+          image: qos/host
           command: /qos_host.linux.x86_64
           args:
             - --host-ip 0.0.0.0
@@ -22,16 +22,23 @@ spec:
             - name: ENCLAVE_CID
               value: "16"
           ports:
-            - name: http
+            - name: qos-host-http
               containerPort: 3001
           livenessProbe:
             httpGet:
               path: /qos/host-health
-              port: http
+              port: qos-host-http
           readinessProbe:
             httpGet:
               path: /qos/enclave-health
-              port: http
+              port: qos-host-http
+          startupProbe:
+            httpGet:
+              path: /qos/enclave-health
+              port: qos-host-http
+            # allow an hour to start up
+            failureThreshold: 360
+            periodSeconds: 10
           securityContext:
             capabilities:
               drop:
