--- a/src/qos_host/kustomize/base/kustomization.yaml
+++ b/src/qos_host/kustomize/base/kustomization.yaml
@@ -1,8 +1,11 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
-commonLabels:
-  app.kubernetes.io/name: tkhq-qos-host
+apiVersion: kustomize.config.k8s.io/v1alpha1
+kind: Component
 resources:
-  - deployment.yaml
-images:
-  - name: qos/host
+  - service.yaml
+patches:
+  - target:
+      group: apps
+      version: v1
+      kind: Deployment
+      name: example
+    path: deployment.yaml
