--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -30,4 +30,4 @@ jobs:
 
       - name: Run `make dist`
         shell: 'script -q -e -c "bash {0}"'
-        run: make PRESERVE_CACHE=true dist
+        run: make dist/qos_client.oci.x86_64.tar
