--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -31,3 +31,9 @@ jobs:
       - name: Run `make dist`
         shell: 'script -q -e -c "bash {0}"'
         run: make dist
+
+      - uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3.1.2
+        with:
+          name: dist
+          path: dist/
+          retention-days: 1
