--- a/src/images/enclave/Dockerfile
+++ b/src/images/enclave/Dockerfile
@@ -3,7 +3,7 @@ LABEL org.opencontainers.image.source=https://github.com/tkhq/qos
 ARG BIN
 ARG EIF
 VOLUME /run/nitro_enclaves
-VOLUME /var/log/run/nitro_enclaves
+VOLUME /var/log/nitro_enclaves
 COPY ${BIN} /qos_enclave
 COPY ${EIF} /nitro.eif
 ENTRYPOINT ["/qos_enclave"]
