When tagging docker images, use commit hash instead of github virtual merge commit
Github Actions sets GITHUB_SHA to a virtual merge commit rather than the actual PR branch head. From [docs](https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#pull_request):
> Note that `GITHUB_SHA` for this event is the last merge commit of the pull
> request merge branch. If you want to get the commit ID for the last commit
> to the head branch of the pull request,
> use `github.event.pull_request.head.sha` instead.

--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -73,7 +73,7 @@ jobs:
             skopeo copy --all \
               "oci-archive:${image}.oci.x86_64.tar" \
               --dest-creds "${{ steps.login-ecr.outputs.docker_username_799078726966_dkr_ecr_us_east_1_amazonaws_com }}:${{ steps.login-ecr.outputs.docker_password_799078726966_dkr_ecr_us_east_1_amazonaws_com }}" \
-              "docker://${{ steps.login-ecr.outputs.registry }}/tkhq/${image}:sha-${GITHUB_SHA}"
+              "docker://${{ steps.login-ecr.outputs.registry }}/tkhq/${image}:sha-${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}"
           done
 
   upload_to_ghcr:
@@ -101,5 +101,5 @@ jobs:
             skopeo copy --all \
               "oci-archive:${image}.oci.x86_64.tar" \
               --dest-creds "${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}" \
-              "docker://ghcr.io/tkhq/${image}:sha-${GITHUB_SHA}"
+              "docker://ghcr.io/tkhq/${image}:sha-${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}"
           done
