Tag docker images with PR number and `latest` when relevant

--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -68,6 +68,9 @@ jobs:
             qos_client
             qos_enclave
             qos_host
+          tags: >-
+            ${{ github.ref == format('refs/heads/{0}', 'main') && 'latest' || '' }}
+            ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.number) || '' }}
         run: |
           skopeo login \
             --username "${{ steps.login-ecr.outputs.docker_username_799078726966_dkr_ecr_us_east_1_amazonaws_com }}" \
@@ -77,6 +80,11 @@ jobs:
             skopeo copy --all \
               "oci-archive:${image}.oci.x86_64.tar" \
               "docker://${{ steps.login-ecr.outputs.registry }}/tkhq/${image}:sha-${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}"
+            for tag in ${tags}; do
+              skopeo copy --all \
+                "docker://${{ steps.login-ecr.outputs.registry }}/tkhq/${image}:sha-${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}" \
+                "docker://${{ steps.login-ecr.outputs.registry }}/tkhq/${image}:${tag}"
+            done
           done
 
   upload_to_ghcr:
@@ -99,6 +107,9 @@ jobs:
             qos_client
             qos_enclave
             qos_host
+          tags: >-
+            ${{ github.ref == format('refs/heads/{0}', 'main') && 'latest' || '' }}
+            ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.number) || '' }}
         run: |
           skopeo login \
             --username "${{ github.actor }}" \
@@ -108,4 +119,9 @@ jobs:
             skopeo copy --all \
               "oci-archive:${image}.oci.x86_64.tar" \
               "docker://ghcr.io/tkhq/${image}:sha-${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}"
+            for tag in ${tags}; do
+              skopeo copy --all \
+                "docker://ghcr.io/tkhq/${image}:sha-${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}" \
+                "docker://ghcr.io/tkhq/${image}:${tag}"
+            done
           done
