--- a/src/qos_core/Cargo.toml
+++ b/src/qos_core/Cargo.toml
@@ -10,6 +10,7 @@ qos_p256 = { path = "../qos_p256" }
 qos_nsm = { path = "../qos_nsm", default-features = false }
 
 nix = { version = "0.26", features = ["socket"], default-features = false }
+libc = "=0.2.144"
 borsh = { version = "0.10" }
 
 # For AWS Nitro
