--- a/kustomize/components/qos_enclave/kustomization.yaml
+++ b/kustomize/components/qos_enclave/kustomization.yaml
@@ -5,4 +5,5 @@ patches:
       group: apps
       version: v1
       kind: Deployment
+      labelSelector: qos.turnkey.io=app
     path: deployment.yaml
