--- a/kustomize/components/qos_host/kustomization.yaml
+++ b/kustomize/components/qos_host/kustomization.yaml
@@ -7,4 +7,5 @@ patches:
       group: apps
       version: v1
       kind: Deployment
+      labelSelector: qos.turnkey.io=app
     path: deployment.yaml
