Move to ghcr.io as we currently don't have qos on DockerHub

--- a/kustomize/components/qos_enclave/deployment.yaml
+++ b/kustomize/components/qos_enclave/deployment.yaml
@@ -7,7 +7,7 @@ spec:
     spec:
       containers:
         - name: qos-enclave
-          image: qos/enclave
+          image: ghcr.io/tkhq/qos_enclave
           command:
             - /qos_enclave
           resources:
