--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,11 @@ fetch/*.tar filter=lfs diff=lfs merge=lfs -text
 fetch/*.tar.xz filter=lfs diff=lfs merge=lfs -text
 fetch/*.tar.gz filter=lfs diff=lfs merge=lfs -text
 fetch/*.bz2 filter=lfs diff=lfs merge=lfs -text
+cache/aws/x86_64/bzImage filter=lfs diff=lfs merge=lfs -text
+cache/aws/x86_64/nsm.ko filter=lfs diff=lfs merge=lfs -text
+cache/aws/x86_64/lib64/libssl.a filter=lfs diff=lfs merge=lfs -text
+cache/aws/x86_64/lib64/libcrypto.a filter=lfs diff=lfs merge=lfs -text
+cache/aws/x86_64/lib/libpcsclite.a filter=lfs diff=lfs merge=lfs -text
+cache/bin/eif_build filter=lfs diff=lfs merge=lfs -text
+cache/bin/gen_init_cpio filter=lfs diff=lfs merge=lfs -text
+cache/bin/gen_initramfs.sh filter=lfs diff=lfs merge=lfs -text
