--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -28,17 +28,10 @@ jobs:
         run: git lfs pull
         shell: bash
 
-      - name: Run `make images`
-        shell: 'script -q -e -c "bash {0}"'
-        run: |
-            make toolchain
-            rm -rf fetch/apt
-            make images
-
       - uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3.1.2
         with:
-          name: out
-          path: out/
+          name: dist
+          path: dist/
           retention-days: 1
 
   upload_to_ecr:
@@ -63,7 +56,7 @@ jobs:
       - name: Download Artifacts
         uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a # v3.0.2
         with:
-          name: out
+          name: dist
 
       - name: Upload images to ECR
         env:
@@ -102,7 +95,7 @@ jobs:
       - name: Download Artifacts
         uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a # v3.0.2
         with:
-          name: out
+          name: dist
 
       - name: Upload images to GHCR
         env:
