--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -8,9 +8,42 @@ on:
   workflow_dispatch: # Allows manual invocation
 
 jobs:
+  # This job pre-warms the cache with toolchain
+  toolchain-cache:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4.0.0
+        with:
+          submodules: true
+
+      - name: Cache
+        id: cache
+        uses: actions/cache@88522ab9f39a2ea568f7027eddc7d8d8bc9d59c8 # v3.3.1
+        with:
+          lookup-only: true
+          key: toolchain-${{ hashFiles('config/apt-hashes-x86_64.list') }}
+          path: cache/toolchain.tar
+
+      - name: Setup Checkout
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: |
+          sudo apt-get install -y git-lfs
+          git lfs fetch --include "fetch/apt/*"
+          git lfs checkout
+
+      - name: Run `make toolchain`
+        if: steps.cache.outputs.cache-hit != 'true'
+        shell: 'script -q -e -c "bash {0}"'
+        run: |
+          make cache/toolchain.tar
+
   build:
     name: Build Toolchain Artifacts
     runs-on: ubuntu-latest
+    needs:
+      - toolchain-cache
     timeout-minutes: 120
     steps:
       - name: Install git lfs
@@ -20,15 +53,33 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
         with:
+          fetch-depth: 0
           lfs: true
           submodules: true
+
+      # make (and hence toolchain) rely on file timestamps
+      - name: git-restore-mtime
+        run: |
+          sudo apt-get install -qq -y git-restore-mtime
+          git restore-mtime
+          git submodule foreach 'git restore-mtime'
+
+      - name: Pull toolchain from cache
+        uses: actions/cache@88522ab9f39a2ea568f7027eddc7d8d8bc9d59c8 # v3.3.1
+        with:
+          fail-on-cache-miss: true
+          key: toolchain-${{ hashFiles('config/apt-hashes-x86_64.list') }}
+          path: cache/toolchain.tar
+
+      - name: Complete the setup of toolchain
+        run: |
+          make toolchain
 
       - name: Run `make images`
         shell: 'script -q -e -c "bash {0}"'
         run: |
-            make toolchain
-            rm -rf fetch/apt
-            make images
+          rm -rf fetch/apt
+          make images
 
       - uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3.1.2
         with:
