--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/toolchain"]
 	path = src/toolchain
-	url = https://codeberg.org/distrust/toolchain
+	url = https://git.distrust.co/public/toolchain
