--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -80,7 +80,10 @@ jobs:
       - name: Run `make images`
         shell: 'script -q -e -c "bash {0}"'
         run: |
-          make images
+          make \
+            out/qos_host.oci.x86_64.tar \
+            out/qos_enclave.oci.x86_64.tar \
+            out/qos_client.oci.x86_64.tar
 
       - uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3.1.2
         with:
