--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -44,7 +44,13 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - toolchain-cache
-    timeout-minutes: 120
+    strategy:
+      matrix:
+        include:
+          - target: qos_host.oci.x86_64.tar
+          - target: qos_enclave.oci.x86_64.tar
+          - target: qos_client.oci.x86_64.tar
+    timeout-minutes: 70
     steps:
       - name: Checkout sources
         uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
@@ -77,18 +83,15 @@ jobs:
         run: |
           make toolchain
 
-      - name: Run `make images`
+      - name: Run `make out/${{ matrix.target }}`
         shell: 'script -q -e -c "bash {0}"'
         run: |
-          make \
-            out/qos_host.oci.x86_64.tar \
-            out/qos_enclave.oci.x86_64.tar \
-            out/qos_client.oci.x86_64.tar
+          make out/${{ matrix.target }}
 
       - uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3.1.2
         with:
-          name: out
-          path: out/
+          name: ${{ matrix.target }}
+          path: out/${{ matrix.target }}
           retention-days: 1
 
   upload_to_ecr:
@@ -112,8 +115,6 @@ jobs:
 
       - name: Download Artifacts
         uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a # v3.0.2
-        with:
-          name: out
 
       - name: Upload images to ECR
         env:
@@ -131,7 +132,7 @@ jobs:
             ${{ steps.login-ecr.outputs.registry }}
           for image in ${images}; do
             skopeo copy --all \
-              "oci-archive:${image}.oci.x86_64.tar" \
+              "oci-archive:./${image}.oci.x86_64.tar/${image}.oci.x86_64.tar" \
               "docker://${{ steps.login-ecr.outputs.registry }}/tkhq/${image}:sha-${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}"
             for tag in ${tags}; do
               skopeo copy --all \
@@ -151,9 +152,6 @@ jobs:
     steps:
       - name: Download Artifacts
         uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a # v3.0.2
-        with:
-          name: out
-
       - name: Upload images to GHCR
         env:
           images: >-
@@ -170,7 +168,7 @@ jobs:
             ghcr.io
           for image in ${images}; do
             skopeo copy --all \
-              "oci-archive:${image}.oci.x86_64.tar" \
+              "oci-archive:./${image}.oci.x86_64.tar/${image}.oci.x86_64.tar" \
               "docker://ghcr.io/tkhq/${image}:sha-${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}"
             for tag in ${tags}; do
               skopeo copy --all \
